# harnessx

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  OBSIDIAN.md  README.md
.claude/agent-memory/rust-ergonomics-specialist/: MEMORY.md  project_harnessx_patterns.md
.claude/agents/: hx-intake-onboarding-specialist.md  hx-user-troubleshooting-specialist.md  rust-commenting-specialist.md  rust-ergonomics-specialist.md  rust-integration-testing-specialist.md  rust-navigator.md  rust-senior-architect.md  rust-unit-testing-specialist.md
.claude/hooks/: session-start.sh
.claude/skills/hx-agent-interview/: SKILL.md
.claude/skills/hx-execution-next-task/: SKILL.md
.claude/skills/hx-intake-actions-writing/: SKILL.md
.claude/skills/hx-intake-completion/: SKILL.md
.claude/skills/hx-intake-completion-exploration/: SKILL.md
.claude/skills/hx-intake-completion-ideation/: SKILL.md
.claude/skills/hx-intake-completion-project-risk/: SKILL.md
.claude/skills/hx-intake-exploration/: SKILL.md
.claude/skills/hx-intake-onboarding-goal/: SKILL.md
.obsidian/: workspace.json
docs/: MILESTONES.md  README.md  _PROCESS.md  autoloop.md  autorun.md  context.md  intake-actions.md  intake-completion.md  intake-onboarding.md  intake-team.md  intake.md  obsidian-cli.md  planning-epics.md  planning-milestones.md  planning-stories.md  planning-tasks.md  progress.md  projects.md  session.md
harness/: _PROCESS.md  progress.md
harnessx/: projects.json
harnessx/my-project/: progress.json
projects/: projects.json
src/lib/: errors.rs  lib.rs  output.rs  templates.rs
(+68 files in other folders)
