[package]
name = "harnessx"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "harnessx"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol_str = { version = "0.3.6", features = ["serde"] }
thiserror = "2.0.18"
