[package]
name = "harnessx"
version = "0.1.15"
edition = "2024"
authors = ["Shaun McDonogh"]
description = "CLI for project management"
license = "MIT"
repository = "https://github.com/coderaidershaun/harnessx"
readme = "README.md"
exclude = [
    "harnessx/",
]

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "harnessx"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol_str = { version = "0.3.6", features = ["serde"] }
thiserror = "2.0.18"
